src/components/PhoneNumberAuth/PhoneNumberAuthPresenter.scss
@use "../../styles/fonts" as *;
@use "../../styles/countrySelection" as *;
@use "../../styles/buttons" as *;

.auth-title {
  display: block;
  text-align: center;
  font-family: $GoFlockFont;
  font-weight: 700;
  line-height: 36px;
  color: $black;
  padding: 0;
  margin: 0;
  font-size: 24px;
  font-size: clamp(18px, 5.8vw, 24px);
}

.subtitle {
  display: block;
  font-family: $GoFlockFont;
  font-weight: 400;
  line-height: 24px;
  text-align: center;
  color: $secondaryColor;
  padding: 0;
  margin: 0 0 20px 0;
  font-size: 14px;
  font-size: clamp(12px, 3.38vw, 14px);
  .subtitle {
    .mobile_number {
      white-space: nowrap;
    }
  }
}
.auth_sec {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}
.auth-cnt {
  display: block;
  text-align: center;
  margin: 0px;
  box-shadow: none;
  padding: 0px;
  box-shadow: none;
  svg {
    display: block;
    margin: 0 auto 20px;
    width: clamp(150px, 48vw, 200px);
  }
}
.onboarding-sec {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: calc(100vh - 165px);
  .auth-cnt {
    img.welcome {
      margin: 0 auto 45px;
      width: clamp(200px, 75vw, 300px);
    }
    .auth-title {
      margin-bottom: 8px;
      line-height: 42px;
      font-size: clamp(22px, 6.75vw, 28px);
    }
    .subtitle {
      max-width: 350px;
    }
  }
}

